Update of the data model

--- a/D2.4/formal_intro.tex
+++ b/D2.4/formal_intro.tex
@@ -149,5 +149,5 @@ finally it is possible to manually write code which is annotated with
 properties that can be verified formally (see also
 Section~\ref{sec:contr-based-appr}. An example for a code generation
 based approach is SCADE, the B~method is based on refinement and formal
-proof and Frama-C, GNATprove / SPARK are based on source code annotation.
+proof and Frama-C, GNATprove or SPARK are based on source code annotation.
 
