--- a/D2.4/openETCS_meth.tex
+++ b/D2.4/openETCS_meth.tex
@@ -267,11 +267,35 @@ The figure \ref{fig:links} gives the Ecore model of all the data model as descri
 \label{sec:naming}
 
 
-\subsubsection{Variable naming convention}
+All the items described in the last section shall be named in a unique way. 
+This section give some naming convention to easy modelling and VnV.
+
+In a general way, the name shall be clear, concise to facilitate the understanding of the models.
+
+
 
 \begin{comment}
-How to name object ? base : subset 26 §7.3.2:
-" 7.3.2.11 All Variables have one of the following prefixes:
+Case sensitive language, keywords of target language (SysML, B, C, Scade 5?),...), UPPER case for names issued form official document (SRS, API,...), lower case for others. length of the name
+
+QA plan to check.
+\end{comment}
+
+
+\subsubsection{VariableTypes naming convention}
+
+The naming of the type should consist at least on an object.
+
+The name shall be prefixed by "TYP\_".
+
+\subsubsection{Variable naming convention}
+
+The naming of the variables should consist of at least a combination of a verb and an object using the passive form (for examples:   orderReceivedFromTrackside for a structure,     endOfMissionIsExecuted for a boolean)
+
+For the internal variables, i.e. those defined during the design activities to describe the state of the system and the exchanges between functions, the name shall be prefixed by "INT\_".
+
+For the external variables, name shall be as close as possible to those already defined in the documentation.
+Typically, the naming convention of SRS §7 and 8 shall be follow for the interface with trackside (see § 7.3.2.11):
+
 \begin{itemize}
 \item A\_ Acceleration
 \item D\_ distance
@@ -287,23 +311,21 @@ How to name object ? base : subset 26 §7.3.2:
 \item X\_ Text
 \end{itemize}
 
+For the other external  variables, the name will be prefixed by the short name of the interface:
 
-\end{comment}
+\begin{itemize}
+\item DMI\_
+\item ODO\_ for odometry
+\item BTM\_
+\item RIU\_
+\item \dots
+\end{itemize}
 
+\subsubsection{Feature and Function naming convention}
 
-\begin{comment}
-Case sensitive language, keywords of target language (SysML, B, C, Scade 5?),...), UPPER case for names issued form official document (SRS, API,...), lower case for others. length of the name
+Features and  functions are named using an active form consisting of at least a combination of a verb and an object (for example:   initiateTerminatingASession).
 
-QA plan to check.
-\end{comment}
-
-
-\subsubsection{Function naming convention}
-
-
-\begin{comment}
-TODO: Marc Behrens
-\end{comment}
+A short name, formed from first letters of each word, is defined to  facilitate the naming of sub-functions or requirements (for Example MORC for ManageOfRadioCommunication). 
 
 \subsubsection{Requirement naming convention}
 
